# ComfyUI-Image-Quality-Assessment

./: .gitignore  AGENTS.md  README.md  __init__.py  analysis_nodes.py  comfy_compat.py  conftest.py  dataset_nodes.py  iqa_core.py  iqa_utils.py  logic_nodes.py  opencv_nodes.py  pyiqa_nodes.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  score_normalizer.py  visualization_nodes.py
dev/: comfyui_custom_node_dev_guide.md  comfyui_essential_guide.md
example_workflows/: all-nodes-test.json  basic_iqa.json
locales/en/: nodeDefs.json
scripts/: README.md  setup_dev_env.sh
tests/: TESTING.md  conftest.py  pytest.ini  test_analysis.py  test_compat.py  test_logic.py  test_opencv.py  test_unit.py
tests/fixtures/workflows/: test_analysis_nodes.json  test_opencv_metrics.json  test_pyiqa_noreference.json
tests/integration/: test_workflows.py
tests/unit/: test_aggregation.py  test_analysis_nodes.py  test_caching.py  test_dataset_nodes.py  test_logic_nodes.py  test_metrics.py  test_syntax.py
utils/: __init__.py
web/docs/: README.md  index.md
web/js/: iqa_score_display.js
