[project]
name = "comfyui-iqa-node"
description = "Image Quality Assessment nodes for ComfyUI using PyIQA and OpenCV"
version = "1.0.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "pyiqa>=0.1.0",
    "opencv-python>=4.5.0",
    "torch>=1.7.0",
    "numpy>=1.19.0"
]

[project.urls]
Repository = "https://github.com/yourusername/ComfyUI-IQA-Node"
